<resources>
    <string name="app_name">SlackClone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="namesurname">NameSurname</string>
    <string name="name_email_com">name@email.com</string>
    <string name="log_in">Log in</string>
    <string name="addclickbutton">AddClickButton</string>
    <string name="please_log_in">Please Log In</string>
    <string name="openNavDrawer">Open navigation drawer</string>
    <string name="closeNavDrawer">Close navigation drawer</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_createuser_btn">Sign up</string>
    <string name="email">email</string>
    <string name="user_name">user name</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="generate_background_color">Generate Background Color</string>
    <string name="create_user">Create User</string>
</resources>
